# docs/swagger.json
@@ -348,6 +348,26 @@
                 }
             }
         },
+        "/subMailing": {
+            "post": {
+                "description": "Subscribes a user to mailing lists",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Subscribe mailing",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/unsubMailing": {
             "post": {
                 "description": "Describes the user from the mailing list",
@@ -362,14 +382,8 @@
                 ],
                 "summary": "Unsubscribe mailing",
                 "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
+                    "200": {
+                        "description": "OK"
                     }
                 }
             }
